src/objects/IS2_TGH__ISPHStageList__c.object
<CustomObject>
    <description>This is a template for the Pipeline History Stage List Object</description>
    <fields>
        <fullName>IS2_TGH__Interval__c</fullName>
        <label>Interval</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IS2_TGH__StageEnabledLong__c</fullName>
        <label>StageEnabledLong</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IS2_TGH__StageEnabled__c</fullName>
        <label>StageEnabled</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IS2_TGH__StageNameLong__c</fullName>
        <label>StageNameLong</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IS2_TGH__StageName__c</fullName>
        <label>StageName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ISPHStageList</label>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ISPHStageLists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>